Fixed sizing issue caused by overflow scrollbar on room div

--- a/src/assets/stylesheets/home.css
+++ b/src/assets/stylesheets/home.css
@@ -34,7 +34,7 @@
     font-size: 25px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 
 .room_list {
